--- a/views/admin/courses/create.html
+++ b/views/admin/courses/create.html
@@ -382,33 +382,27 @@
 			  <div class="card">
                   <div class="card-header">
                     <h4>Course Table</h4>
-                    <a class="btn btn-primary" href="/admin/courses/create">Add course</a>
                   </div>
                   <div class="card-body">
-                    <table class="table">
-                      <thead>
-                        <tr>
-                          <th scope="col">ID</th>
-                          <th scope="col">Image</th>
-                          <th scope="col">Title</th>
-                          <th scope="col">Price</th>
-                          <th scope="col">Action</th>
-                        </tr>
-                      </thead>
-                      <tbody>
-						{{range $i, $course := .Courses}}
-							<tr>
-								<th scope="row">{{$course.ID}}</th>
-								<td>
-									<img class="img-thumbnail" width="100" height="100" src="{{(index $.Images $i).ImageURL}}" alt="...">
-								</td>
-								<td>{{$course.Title}}</td>
-								<td>{{$course.Price}}</td>
-								<td>Action</td>
-							</tr>
-						{{end}}
-                      </tbody>
-                    </table>
+					<form method="POST" action="/admin/courses" enctype="multipart/form-data">
+						<div class="form-group">
+                      		<label>Image</label>
+                      		<input type="file" class="form-control" name="image">
+                    	</div>
+						<div class="form-group">
+                      		<label>Title</label>
+                      		<input type="text" class="form-control" name="title">
+                    	</div>
+						<div class="form-group">
+                      		<label>Description</label>
+                      		<input type="text" class="form-control" name="description">
+                    	</div>
+						<div class="form-group">
+                      		<label>Price</label>
+                      		<input type="text" class="form-control" name="price">
+                    	</div>
+						<button class="btn btn-primary">Create</button>
+					</form>
                   </div>
                 </div>
           </div>
